[gd_scene load_steps=27 format=3 uid="uid://ruehqpba0q7b"]

[ext_resource type="PackedScene" path="res://scenes/objects/pickable_items/equipment/ranged/_gun_item.tscn" id="1"]
[ext_resource type="Resource" path="res://resources/tiny_items/ammunition/455_webley.tres" id="2"]
[ext_resource type="Script" path="res://scenes/effects/mesh_instances.gd" id="4"]
[ext_resource type="Script" path="res://scenes/objects/pickable_items/equipment/ranged/webley_revolver/effects.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://cs0hb0iqskdip" path="res://resources/models/items/ranged/webley_revolver/Webley.glb" id="5_78i6t"]
[ext_resource type="Script" path="res://scenes/objects/pickable_items/equipment/ranged/webley_revolver/revolver_item.gd" id="6"]
[ext_resource type="PackedScene" path="res://scenes/effects/hit_effect.tscn" id="7"]
[ext_resource type="PackedScene" path="res://scenes/effects/webley_audio.tscn" id="8"]
[ext_resource type="PackedScene" path="res://scenes/objects/pickable_items/equipment/ranged/webley_revolver/_smoke.tscn" id="9"]
[ext_resource type="AudioStream" uid="uid://4vdqkhe8at6p" path="res://resources/sounds/dryfire/412297__jaklocke__gun-trigger-pull-2.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://31uct7ytooar" path="res://resources/sounds/reloading/revolver/revolver_reload.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://ct3crbxdeurn6" path="res://resources/sounds/impacts/metal_and_gun/412295__jaklocke__gun-hitting-ground.mp3" id="12"]
[ext_resource type="AudioStream" uid="uid://biqwhqeb70a3r" path="res://resources/sounds/reloading/ammo_pickup/422716__niamhd00145229__reload-ammo.ogg" id="13"]
[ext_resource type="Script" path="res://scenes/objects/pickable_items/equipment/ranged/webley_revolver/shell_reload_effects.gd" id="14"]
[ext_resource type="Animation" uid="uid://cfv0ss0xjaxmj" path="res://resources/animations/webley_reload-weapon.res" id="15_ci8p3"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_g655b"]
points = PackedVector3Array(-0.0912268, 0.0786623, -0.0078841, 0.1152, 0.165088, 0.00282586, 0.126479, 0.153818, 0.0103448, -0.0840095, -0.00398862, -0.0122032, -0.0163347, 0.142547, 0.0216254, -0.0163347, 0.13879, -0.0234794, -0.0877535, -0.00398862, 0.0103448, 0.126479, 0.135033, -0.0084415, -0.0276139, 0.165088, -0.0122032, -0.0739984, 0.110032, 0.00953065, 0.0249672, 0.116232, 0.0216254, 0.0249672, 0.119989, -0.0234794, -0.106544, 0.0335803, -0.0159604, 0.126479, 0.135033, 0.0103448, -0.0276139, 0.165088, 0.0103448, -0.114079, 0.0185527, 0.00658312, 0.1152, 0.165088, -0.00468424, -0.0764744, 0.104961, -0.0159604, -0.0576837, 0.146304, 0.00658312, -0.0840095, -0.00777936, 0.00658312, -0.0989494, 0.037976, 0.0126364, -0.0651953, 0.0185527, 0.014102, 0.126479, 0.131276, -0.00468424, -0.106544, 0.0223096, -0.0159604, -0.0840095, -0.00777936, -0.0084415, -0.0966583, 0.0715881, 0.00615994, -0.0651953, 0.0223096, -0.0159604, -0.0163347, 0.116232, 0.0216254, -0.0576837, 0.146304, -0.00468424, 0.126479, 0.131276, 0.00658312, -0.0163347, 0.119989, -0.0234794, -0.1028, 0.0486248, -0.0159604)

[sub_resource type="Animation" id="6"]
resource_name = "break_open"
length = 1.68333

[sub_resource type="Animation" id="7"]
resource_name = "close_cyl_weapon"
length = 1.08333

[sub_resource type="Animation" id="8"]
resource_name = "enter_shell_1_weapon"

[sub_resource type="Animation" id="9"]
resource_name = "enter_shell_2_weapon"

[sub_resource type="Animation" id="10"]
resource_name = "enter_shell_3_weapon"

[sub_resource type="Animation" id="11"]
resource_name = "enter_shell_4_weapon"

[sub_resource type="Animation" id="12"]
resource_name = "enter_shell_5_weapon"
length = 0.75

[sub_resource type="Animation" id="13"]
resource_name = "enter_shell_weapon"
length = 1.08333

[sub_resource type="Animation" id="14"]
resource_name = "reload"
length = 8.06667

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ireru"]
_data = {
"break_open": SubResource("6"),
"close_cyl_weapon": SubResource("7"),
"enter_shell_1_weapon": SubResource("8"),
"enter_shell_2_weapon": SubResource("9"),
"enter_shell_3_weapon": SubResource("10"),
"enter_shell_4_weapon": SubResource("11"),
"enter_shell_5_weapon": SubResource("12"),
"enter_shell_weapon": SubResource("13"),
"reload": ExtResource("15_ci8p3"),
"reload.old": SubResource("14")
}

[node name="WebleyRevolver" instance=ExtResource("1")]
mass = 1.0
script = ExtResource("6")
ammo_types = Array[Resource]([ExtResource("2")])
ammunition_capacity = 6
reload_amount = 6
cooldown = 0.1
handling = 17.0
ads_hold_position = Vector3(-0.023, 0.026, -0.076)
ads_hold_rotation = Vector3(-3.723, 2.163, 11.646)
melee_style = 1
player_path = NodePath(".")
detection_raycast = NodePath("RayCast3D")
item_size = 0
item_name = "Webley revolver"
item_drop_sound = ExtResource("12")

[node name="Webley" parent="." index="0" instance=ExtResource("5_78i6t")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.117501, 0)

[node name="Webley2" parent="Webley/Webley_Arm/Skeleton3D" index="0"]
script = ExtResource("4")

[node name="BulletPosition" type="Marker3D" parent="Webley/Webley_Arm/Skeleton3D/Webley2" index="0"]
unique_name_in_owner = true
transform = Transform3D(0.0934741, 0.0195869, -0.995429, -0.0307337, 0.999387, 0.0167788, 0.995147, 0.0290248, 0.0940188, 0.0379915, 0.0519359, 0)

[node name="BulletPosition2" type="Marker3D" parent="Webley/Webley_Arm/Skeleton3D/Webley2" index="1"]
unique_name_in_owner = true
transform = Transform3D(0.0934741, 0.0195869, -0.995429, -0.0307337, 0.999387, 0.0167788, 0.995147, 0.0290248, 0.0940188, 0.0308883, 0.0472652, 0.0127957)

[node name="BulletPosition3" type="Marker3D" parent="Webley/Webley_Arm/Skeleton3D/Webley2" index="2"]
unique_name_in_owner = true
transform = Transform3D(0.0934741, 0.0195869, -0.995429, -0.0307337, 0.999387, 0.0167788, 0.995147, 0.0290248, 0.0940188, 0.0181057, 0.0429385, 0.0119502)

[node name="BulletPosition4" type="Marker3D" parent="Webley/Webley_Arm/Skeleton3D/Webley2" index="3"]
unique_name_in_owner = true
transform = Transform3D(0.0934741, 0.0195869, -0.995429, -0.0307337, 0.999387, 0.0167788, 0.995147, 0.0290248, 0.0940188, 0.0123582, 0.039929, 0.000377949)

[node name="BulletPosition5" type="Marker3D" parent="Webley/Webley_Arm/Skeleton3D/Webley2" index="4"]
unique_name_in_owner = true
transform = Transform3D(0.0934741, 0.0195869, -0.995429, -0.0307337, 0.999387, 0.0167788, 0.995147, 0.0290248, 0.0940188, 0.0191213, 0.0415536, -0.0115351)

[node name="BulletPosition6" type="Marker3D" parent="Webley/Webley_Arm/Skeleton3D/Webley2" index="5"]
unique_name_in_owner = true
transform = Transform3D(0.0934741, 0.0195869, -0.995429, -0.0307337, 0.999387, 0.0167788, 0.995147, 0.0290248, 0.0940188, 0.0306266, 0.048409, -0.0128195)

[node name="MeshInstance3D" parent="." index="1"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.108676, 0)
mesh = null
script = null

[node name="CollisionShape3D" parent="." index="2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.117287, 0)
shape = SubResource("ConvexPolygonShape3D_g655b")

[node name="Effects" type="Node3D" parent="." index="3"]
script = ExtResource("5")
smoke_particles = ExtResource("9")
sound_effect = ExtResource("8")
hit_effect = ExtResource("7")

[node name="Flash" type="OmniLight3D" parent="Effects" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.381674)
visible = false
light_color = Color(0.760784, 0.364706, 0.0470588, 1)
light_energy = 5.0
shadow_enabled = true
omni_range = 6.0
omni_attenuation = 7.0

[node name="FlashTimer" type="Timer" parent="Effects/Flash" index="0"]
one_shot = true

[node name="SmokeOrigin" type="Marker3D" parent="Effects" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0535101, -0.150913)
visible = false

[node name="SoundOrigin" type="Marker3D" parent="Effects" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0460132, -0.0354128)
visible = false

[node name="RayCast3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0281493, -0.0297382)
visible = true

[node name="Sounds" type="Node3D" parent="." index="8"]

[node name="Unsheath" type="AudioStreamPlayer3D" parent="Sounds" index="0"]
bus = &"Effects"

[node name="Sheath" type="AudioStreamPlayer3D" parent="Sounds" index="1"]
bus = &"Effects"

[node name="Dryfire" type="AudioStreamPlayer3D" parent="Sounds" index="2"]
stream = ExtResource("10")
bus = &"Effects"

[node name="Reload" type="AudioStreamPlayer3D" parent="Sounds" index="3"]
stream = ExtResource("11")
bus = &"Effects"

[node name="Unload" type="AudioStreamPlayer3D" parent="Sounds" index="4"]
stream = ExtResource("13")
bus = &"Effects"

[node name="HoldPosition" parent="." index="9"]
transform = Transform3D(0.990265, -0.138034, -0.0179346, 0.139175, 0.984048, 0.11081, 0.00235294, -0.112227, 0.99368, -0.02, 0.031, -0.081)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="10"]
unique_name_in_owner = true
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_ireru")
}

[node name="ShellReloadEffects" type="Node" parent="AnimationPlayer" index="0"]
script = ExtResource("14")
impulse_position = Vector3(0.2, 0.09, 0.2)

[node name="PlacementAnchor" parent="." index="11"]
visible = false

[connection signal="on_shoot" from="." to="Effects" method="_on_RevolverItem_on_shoot"]
[connection signal="target_hit" from="." to="Effects" method="_on_RevolverItem_target_hit"]
[connection signal="timeout" from="Effects/Flash/FlashTimer" to="Effects" method="_on_FlashTimer_timeout"]

[editable path="Webley"]
